--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "parcel-bundler": "^1.12.5"
+  },
+  "dependencies": {
+    "regenerator-runtime": "^0.14.0"
   }
 }
